# mlx

./: .bazelrc  .gitignore  0001-Open-files-in-readonly-mode.patch  BUILD.bazel  MODULE.bazel  WORKSPACE
build_rules/: kernel_preamble.bzl  metal.bzl  metal_config.bzl  metal_version_capture.bzl
mlx/backend/metal/: device.cpp
mlx/io/: safetensors.cpp
