module(name = "mlx")

bazel_dep(name = "fmt", version = "11.0.2")
bazel_dep(name = "nanobind", version = "2.1.0")
bazel_dep(name = "rules_apple", version = "3.9.2", dev_dependency = True)
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "apple_support", version = "1.15.1")
bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "nlohmann_json", version = "3.11.3.bcr.1")
bazel_dep(name = "doctest", version = "2.4.11", dev_dependency = True)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "metal_cpp",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
cc_library(
    name = "metal_cpp",
    hdrs = glob(["**/*.hpp"]),
    includes = ["."],
    linkopts=[
        "-framework", "CoreGraphics",
        "-framework", "Metal",
        "-framework", "Foundation",
        "-framework", "Accelerate",
    ]
)
""",
    sha256 = "d0a7990f43c7ce666036b5649283c9965df2f19a4a41570af0617bbe93b4a6e5",
    strip_prefix = "metal-cpp",
    urls = ["https://developer.apple.com/metal/cpp/files/metal-cpp_macOS15_iOS18-beta.zip"],
)

http_archive(
    name = "gguf_tools",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
cc_library(
    name = "gguf_tools",
    hdrs = glob(["**/*.h"]),
    srcs = glob(["**/*.c"], exclude=["gguf-tools.c"]),
    includes = ["."],
)
""",
    sha256 = "165327d8f48835897b18c6c936cedd8106993ca32f7ac3221479087ab2d9cef4",
    strip_prefix = "gguf-tools-4e6455ecaf92b1a59e6a3291646459af3154bef5",
    urls = [
        "https://github.com/antirez/gguf-tools/archive/4e6455ecaf92b1a59e6a3291646459af3154bef5.zip",
    ],
    patch_args = ["-p1"],
    patches = [
        # Not a full fix - makes all GGUF files read-only. Needed for iOS.
        ":0001-Open-files-in-readonly-mode.patch"
    ]
)

